--- a/index.html
+++ b/index.html
@@ -9,6 +9,46 @@
     <title>Sign-up Now!</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="background">
+            <div class="background-content">
+            </div>
+        </div>
+        <div class="main-wrapper">
+            <div class="main-top">
+                <p>This is not a real online service! You know you need something like this in your life to help you realiye your deepest dreams, Signs up <em>now</em> to get started.</p>
+            </div>
+            <div class="main-mid">
+                <form>
+                    <section>
+                        <span>Let's do this!</span>
+                    </section>
+                    <section id="main-form">
+                        <label for="first-name">FIRST NAME</label>
+                        <input type="text" id="first-name" name="first-name">
+
+                        <label for="last-name">LAST NAME</label>
+                        <input type="text" id="last-name" name="last-name">
+                        
+                        <label for="email">EMAIL</label>
+                        <input type="text" id="email" name="email">
+
+                        <label for="user-number">PHONE NUMBER</label>
+                        <input type="text" id="user-number" name="user-number">
+
+                        <label for="password">PASSWORD</label>
+                        <input type="text" id="password" name="password">
+
+                        <label for="con-password">CONFIRM PASSWORD</label>
+                        <input type="text" id="con-password" name="con-password">
+                    </section>
+                </form>
+            </div>
+            <div class="main-bot">
+            <button>Sign Up</button><br
+            <span>Already a member?<a href="">log in!</a></span>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
