--- a/index.html
+++ b/index.html
@@ -16,51 +16,45 @@
                 </p>
             </div>
         </div>
-        <div class="main-wrapper">
-            <div class="main-top">
-                <p>This is not a real online service! You know you need something like this in your life to help you realiye your deepest dreams, Signs up <em>now</em> to get started.</p>
-            </div>
-            <div class="main-mid">
-                <form> 
-                    <h3>Let's do this!</h3>
-                    <section id="main-form">
-                        <div class="form-block">
-                            <div class="form-element">
-                                <label for="first-name">FIRST NAME</label>
-                                <input type="text" id="first-name" name="first-name">
-                            </div>
-                            <div class="form-element">
-                                <label for="last-name">LAST NAME</label>
-                                <input type="text" id="last-name" name="last-name">
-                            </div>
+        <div class="main-content">
+            <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams, Signs up <em>now</em> to get started.</p>
+            <p>You <em>know</em> you want to.</p>
+            <form> 
+                <div class="main-form">
+                    <div class="form-block">
+                        <div class="form-element">
+                            <label for="first-name">FIRST NAME</label>
+                            <input type="text" id="first-name" name="first-name">
                         </div>
-                        <div class="form-block">
-                            <div class="form-element">
-                                <label for="email">EMAIL</label>
-                                <input type="text" id="email" name="email">
-                            </div>
-                            <div class="form-element">
-                                <label for="user-number">PHONE NUMBER</label>
-                                <input type="text" id="user-number" name="user-number">
-                            </div>
+                        <div class="form-element">
+                            <label for="last-name">LAST NAME</label>
+                            <input type="text" id="last-name" name="last-name">
                         </div>
-                        <div class="form-block">
-                            <div class="form-element">
-                                <label for="password">PASSWORD</label>
-                                <input type="text" id="password" name="password">
-                            </div>
-                            <div class="form-element">
-                                <label for="con-password">CONFIRM PASSWORD</label>
-                                <input type="text" id="con-password" name="con-password">
-                            </div>
+                    </div>
+                    <div class="form-block">
+                        <div class="form-element">
+                            <label for="email">EMAIL</label>
+                            <input type="text" id="email" name="email">
                         </div>
-                    </section>
-                </form>
-            </div>
-            <div class="main-bot">
-            <button>Sign Up</button><br>
-            <span>Already a member?<a href="">log in!</a></span>
-            </div>
+                        <div class="form-element">
+                            <label for="user-number">PHONE NUMBER</label>
+                            <input type="text" id="user-number" name="user-number">
+                        </div>
+                    </div>
+                    <div class="form-block">
+                        <div class="form-element">
+                            <label for="password">PASSWORD</label>
+                            <input type="text" id="password" name="password">
+                        </div>
+                        <div class="form-element">
+                            <label for="con-password">CONFIRM PASSWORD</label>
+                            <input type="text" id="con-password" name="con-password">
+                        </div>
+                    </div>
+                </div>
+                <button type="submit">Create Account</button>
+            </form>
+            <p></p>
         </div>
     </div>
 </body>
